--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fknussel.yamba" >
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,15 +9,26 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name=".StatusActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".StatusActivity"
+            android:label="@string/app_name">
+        </activity>
+        
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/action_settings">
+        </activity>
+        
     </application>
 
 </manifest>
