Register RefreshService into the Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:label="@string/action_settings">
         </activity>
         
+        <service android:name=".RefreshService" />
+        
     </application>
 
 </manifest>
