Register StatusProvider in the app's Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
         </activity>
         
         <service android:name=".RefreshService" />
+
+        <provider
+            android:name=".StatusProvider"
+            android:authorities=".StatusProvider"
+            android:exported="false" />
         
     </application>
 
