--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         </activity>
         
         <activity
+            android:name=".DetailsActivity"
+            android:label="@string/app_name">
+        </activity>
+
+
+        <activity
             android:name=".StatusActivity"
             android:label="@string/app_name">
         </activity>
