--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.fknussel.yamba" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,6 @@
             android:label="@string/app_name">
         </activity>
 
-
         <activity
             android:name=".StatusActivity"
             android:label="@string/app_name">
@@ -34,14 +34,22 @@
             android:name=".SettingsActivity"
             android:label="@string/action_settings">
         </activity>
-        
-        <service android:name=".RefreshService" />
 
         <provider
             android:name=".StatusProvider"
             android:authorities="com.fknussel.yamba.StatusProvider"
             android:exported="false" />
         
+        <receiver
+            android:name=".BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".RefreshService" />
+
     </application>
 
 </manifest>
