--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        
+        <receiver android:name=".NotificationReceiver">
+            <intent-filter>
+                <action android:name="com.fknussel.yamba.action.NEW_STATUSES" />
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".RefreshService" />
