Register the widget in the Manifest file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,22 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name="com.fknussel.yamba.YambaWidget"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.fknussel.yamba.action.NEW_STATUSES" />
+            </intent-filter>
+            
+            <intent-filter>
+                <action android:name= "android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/yamba_widget" />
+        </receiver>
+
         <service
             android:name=".RefreshService" />
 
